welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: type mismatch;
 found   : Unit
 required: Boolean
if (y=4) {
     ^